@@ -164,7 +164,7 @@ public class WatchedFileHandler extends Handler {
         try {
             if (val != null) {
                 Class<?> clz = ClassLoader.getSystemClassLoader().loadClass(val);
-                return (Filter) clz.newInstance();
+                return (Filter) clz.getDeclaredConstructor().newInstance();
             }
         } catch (Exception e) {
             // Ignore
@@ -177,7 +177,7 @@ public class WatchedFileHandler extends Handler {
         try {
             if (val != null) {
                 Class<?> clz = ClassLoader.getSystemClassLoader().loadClass(val);
-                return (Formatter) clz.newInstance();
+                return (Formatter) clz.getDeclaredConstructor().newInstance();
             }
         } catch (Exception e) {
             // Ignore
