@@ -6,7 +6,6 @@ import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -76,7 +75,7 @@ public class CfdpDownlinkIntegrationTest {
     @BeforeAll
     public static void beforeClass() throws Exception {
         EventProducerFactory.setMockup(true);
-        Path dataDir = Paths.get("/tmp/yamcs-cfdp-data");
+        Path dataDir = Path.of(System.getProperty("java.io.tmpdir"), "yamcs-cfdp-data");
         FileUtils.deleteRecursivelyIfExists(dataDir);
         YConfiguration.setupTest("cfdp");
         YamcsServer.getServer().prepareStart();
@@ -85,7 +84,6 @@ public class CfdpDownlinkIntegrationTest {
         YarchDatabaseInstance yarch = YarchDatabase.getInstance(YamcsServer.GLOBAL_INSTANCE);
 
         incomingBucket = yarch.getBucket("cfdpDown");
-
     }
 
     @AfterAll
@@ -379,7 +377,6 @@ public class CfdpDownlinkIntegrationTest {
             }).get();
         }
     }
-
 
     class MyFileSender implements TransferMonitor {
         CfdpOutgoingTransfer trsf;
